refactor: refactored create employee authorization endpoint